enhancement: fix the view of navbar, hero section and categories on mobile screens

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,6 +30,11 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 @custom-variant dark (&:is(.dark *));
